--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.0")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.5.0")
+    testCompile("org.junit.jupiter:junit-jupiter-params:5.5.0")
 
     implementation 'com.github.javafaker:javafaker:0.18'
     implementation 'com.google.code.gson:gson:2.8.5'
