--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.5.0")
     testCompile("org.junit.jupiter:junit-jupiter-params:5.5.0")
 
+    implementation 'org.assertj:assertj-core:3.12.2'
     implementation 'com.github.javafaker:javafaker:0.18'
     implementation 'com.google.code.gson:gson:2.8.5'
 }
