--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ repositories {
     mavenCentral()
 }
 
+run {
+    standardInput = System.in
+}
+
 javafx {
     version = "12.0.1"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.base',
