--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,6 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
