Cleaned up gradle.build and added .gitignore

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
 plugins {
-    id 'org.springframework.boot' version '2.1.6.RELEASE'
+    id 'org.springframework.boot' version "${project.ext.springBootVersion}"
     id 'java'
+    id 'io.spring.dependency-management'
 }
-
-apply plugin: 'io.spring.dependency-management'
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -22,6 +21,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: "${project.ext.appacheCommonsVersion}"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+project.ext{
+    springBootVersion = "2.1.6.RELEASE"
+    appacheCommonsVersion = "3.0"
 }
