--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,6 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: "${project.ext.appacheCommonsVersion}"
+    implementation 'org.apache.commons', name: 'commons-lang3', version: "${project.ext.appacheCommonsVersion}"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
