--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    compile 'org.apache.commons:commons-lang3' + "${appacheCommonsVersion}"
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: "${appacheCommonsVersion}"
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 }
 
 project.ext {
